--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Julien Bordellier
 ---
 <header class="head">
-  <h1>Julien Bordellier</h1>
+  <h1><a href="/">Julien Bordellier</a></h1>
   <h2>Some pensées et quelques thoughts</h2>
 </header>
 <main class="content">
